# voidcode

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  mise.toml  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codex-review.yml  opencode-review.yml  opencode-triage.yml  release.yml
.sisyphus/evidence/: task-11-mise-check.txt  task-11-pr-scope.txt  task-12-mise-check.txt  task-12-pr.txt
.sisyphus/notepads/issue-405-workflow-presets-runtime-fixes-pr/: learnings.md
.sisyphus/notepads/opencode-style-tool-ui/: issues.md  learnings.md
docs/: agent-acp-config.md  agent-architecture.md  agent-boundary.md  agent-tooling-adoption-plan.md  architecture.md  coding-standards.md  current-state.md  development.md  failure-diagnosis-runbook.md  first-task-acceptance-flow.md  memory-strategy.md  mvp-demo-guide.md  mvp-todo-plan.md  oh-my-openagent-research.md  post-mvp-technical-design.md  reasoning-effort-decision.md  roadmap.md  runtime-owned-scheduler-design.md  runtime-owned-todo-state-design.md  runtime-service-decomposition-plan.md  session-continuity-memory-design.md  tui-mvp-spec.md  tui-preferences-design.md
docs/contracts/: README.md  agent-capability-bindings.md  agent-hook-presets.md  agent-tool-calling.md  agent-tool-enforcement.md  approval-flow.md  background-task-delegation.md  cli-http-web-parity.md  client-api.md  runtime-config.md  runtime-events.md  runtime-extension-points.md  runtime-lifecycle-hooks.md  stream-transport.md  web-opencode-alignment.md  workflow-presets.md
docs/superpowers/specs/: 2026-04-12-runtime-owned-scheduler-design.md
docs/tools/: README.md  apply-patch.md  ast-grep.md  edit.md  external-research.md  guidance-injection.md  lsp-format.md  mcp-dynamic.md  multi-edit.md  read-search.md  shell-exec.md  todo-write.md  write-file.md
frontend/: AGENTS.md  README.md  eslint.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: launcher.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css  store.integration.test.ts
frontend/src/components/: ChatThread.test.tsx  ChatThread.tsx  ChildSessionSidebar.test.tsx  ChildSessionSidebar.tsx  Composer.test.tsx  Composer.tsx  OpenProjectModal.test.tsx  OpenProjectModal.tsx  ReviewPanel.test.tsx  ReviewPanel.tsx  RuntimeDebug.tsx  RuntimeOpsPanel.tsx  SessionSidebar.test.tsx  SessionSidebar.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  StatusBar.tsx  TodoPanel.test.tsx  TodoPanel.tsx  sessionTitle.ts  todoPanelModel.ts
frontend/src/i18n/: index.ts
frontend/src/store/: index.test.ts  index.ts
frontend/src/types/: index.ts
schema/: voidcode.config.schema.json
scripts/: hatch_build.py  run-frontend-playwright.mjs  run-frontend-vitest.mjs  stage_frontend_bundle.py  verify_packaged_web_bundle.py
src/voidcode/: __init__.py  cli.py  cli_support.py  server.py
src/voidcode/acp/: README.md  __init__.py  contracts.py  stdio.py
src/voidcode/agent/: README.md  __init__.py  builtin.py  models.py  profile_overlays.py  prompt_sections.py  prompts.py  registry.py
src/voidcode/cli/: __init__.py  app.py
src/voidcode/command/: README.md  __init__.py  events.py  loader.py  models.py  registry.py  resolver.py  templating.py  ui.py
src/voidcode/context/: README.md  __init__.py  readme.py
src/voidcode/doctor/: __init__.py  checker.py  doctor.py  reporter.py
src/voidcode/formatter/: __init__.py  config.py  executor.py
src/voidcode/graph/: README.md  __init__.py  contracts.py  deterministic_graph.py  provider_graph.py  read_only_slice.py  single_agent_slice.py
src/voidcode/hook/: README.md  __init__.py  config.py  executor.py  presets.py
src/voidcode/lsp/: README.md  __init__.py  contracts.py  presets.py  registry.py  roots.py
src/voidcode/mcp/: README.md  __init__.py  builtin.py  config.py  contract.py  observability.py  redaction.py  types.py
src/voidcode/provider/: README.md  __init__.py  anthropic.py  auth.py  capability.py  config.py  copilot.py  deepseek.py  errors.py  glm.py  google.py  grok.py  kimi.py  litellm.py  litellm_backend.py  litellm_config.py  minimax.py  model_catalog.py  models.py  openai.py  opencode.py  opencode_go.py  protocol.py  qwen.py  registry.py  resolution.py  snapshot.py
src/voidcode/runtime/: AGENTS.md  __init__.py  acp.py  active_session.py  background_tasks.py  bundle.py  command_effects.py  config.py  config_schema.py  context_continuity.py  context_rules.py  context_transforms.py  context_window.py  context_window_policy.py  continuity_distillation.py  contracts.py  delegation_routing.py  event_envelopes.py  events.py  execution_seams.py  hook_preset_metadata.py  http.py  local_context_transforms.py  lsp.py  mcp.py  memory.py  model_provider.py  paths.py  permission.py  permission_context.py  (+30 more)
tests/: conftest.py  test_continuity_state.py
tests/integration/: test_http_delegated_parity.py  test_http_transport.py  test_lsp_tool_integration.py  test_read_only_slice.py  test_tool_workflows_integration.py  test_tui_approval_resume.py  test_tui_replay_consistency.py  test_tui_smoke.py  test_web_command.py
tests/unit/: conftest_cache_thresholds.py  test_acp.py  test_apply_patch_fuzz.py  test_apply_patch_tool.py  test_backend_contracts.py  test_cli_smoke.py  test_contract_parity.py  test_edit_tool.py  test_grep_tool.py  test_list_tool.py  test_lsp.py  test_model_provider.py  test_multi_edit_tool.py  test_read_only_graph.py  test_runtime_config.py  test_runtime_events.py  test_runtime_service_extensions.py  test_server.py  test_shell_exec_tool.py  test_single_agent_provider.py  test_single_agent_slice.py  test_skills.py  test_todo_write_tool.py  test_tool_provider.py  test_tui.py  test_tui_app.py  test_tui_boot.py  test_tui_layout_resilience.py  test_tui_runtime_client.py  test_tui_session_view.py  test_webfetch_tool.py  test_websearch_tool.py  test_write_file_tool.py
(+227 files in other folders)
