[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidcode"
version = "0.1.0"
description = "Local-first coding agent runtime inspired by OpenCode and Claude Code"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [
  { name = "VoidCode Contributors" },
]
keywords = ["agents", "cli", "langgraph", "local-first", "runtime"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "langchain-core",
  "langgraph",
  "pydantic",
  "typing-extensions",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "basedpyright",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.scripts]
voidcode = "voidcode.cli:main"

[project.urls]
Homepage = "https://github.com/lei-jia-xing/voidcode"
Repository = "https://github.com/lei-jia-xing/voidcode"
Documentation = "https://github.com/lei-jia-xing/voidcode"

[tool.hatch.build.targets.wheel]
packages = ["src/voidcode"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src"]
failOnWarnings = true

[[tool.basedpyright.executionEnvironments]]
root = "."
extraPaths = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
