[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidcode"
version = "0.1.0"
description = "Local-first coding agent runtime inspired by OpenCode and Claude Code"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "VoidCode Contributors" },
]
keywords = ["agents", "cli", "langgraph", "local-first", "runtime"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "beautifulsoup4",
  "click>=8.1.8",
  "langchain-core",
  "langgraph",
  "lsprotocol",
  "pydantic",
  "pydantic-settings",
  "typing-extensions",
  "textual",
  "httpx",
  "litellm>=1.82.6",
  "uvicorn",
  "rapidfuzz>=3.14.5",
  "unidiff>=0.7.5",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist>=3.8.0",
  "ruff",
  "ty>=0.0.33",
]

[project.scripts]
voidcode = "voidcode.cli:main"

[project.urls]
Homepage = "https://github.com/lei-jia-xing/voidcode"
Repository = "https://github.com/lei-jia-xing/voidcode"
Documentation = "https://github.com/lei-jia-xing/voidcode"

[tool.hatch.build.targets.wheel]
packages = ["src/voidcode"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = ""
markers = [
  "slow: tests that are useful locally but too slow for the fast feedback loop",
  "integration: tests that exercise cross-module/runtime integration paths",
  "fuzz: property-based or fuzz-style tests that can be more expensive than example tests",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
