[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidcode"
version = "0.1.1"
description = "Local-first coding agent runtime inspired by OpenCode and Claude Code"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "VoidCode Contributors" },
]
keywords = ["agents", "cli", "langgraph", "local-first", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "beautifulsoup4",
  "click>=8.1.8",
  "langchain-core",
  "langgraph",
  "lsprotocol",
  "pydantic",
  "pydantic-settings",
  "typing-extensions",
  "textual",
  "httpx",
  "litellm>=1.82.6",
  "uvicorn",
  "rapidfuzz>=3.14.5",
  "unidiff>=0.7.5",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
memory-vector = [
  "sqlite-vec",
]
dev = [
  "hypothesis",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-xdist>=3.8.0",
  "ruff",
  "ty>=0.0.33",
]

[project.scripts]
voidcode = "voidcode.cli:main"

[project.urls]
Homepage = "https://github.com/lei-jia-xing/voidcode"
Repository = "https://github.com/lei-jia-xing/voidcode"
Documentation = "https://github.com/lei-jia-xing/voidcode#readme"
Issues = "https://github.com/lei-jia-xing/voidcode/issues"
Changelog = "https://github.com/lei-jia-xing/voidcode/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/voidcode"]

[tool.hatch.build.targets.sdist]
include = [
  "frontend/**",
  "scripts",
  "src/voidcode",
  "tests",
  "schema",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "CODE_OF_CONDUCT.md",
  "pyproject.toml",
]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "ERA", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
# Promote dead-code adjacent diagnostics to error (default level is warn).
# Note: ty does not currently detect unused imports / variables / functions /
# unreachable code. For "defined but never called" private symbols, use vulture.
unused-awaitable = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"
redundant-cast = "error"
redundant-final-classvar = "error"

[tool.ty.terminal]
# Any future warning-level diagnostic should fail CI; opt out per-rule via
# [tool.ty.rules] if a specific check turns out to be too noisy.
error-on-warning = true

[tool.ty.src]
exclude = ["scripts"]

[tool.pytest.ini_options]
addopts = ""
markers = [
  "slow: tests that are useful locally but too slow for the fast feedback loop",
  "integration: tests that exercise cross-module/runtime integration paths",
  "fuzz: property-based or fuzz-style tests that can be more expensive than example tests",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
